fix #132 all tabs scrollable when overflowing

--- a/frontend/src/main/webapp/Metanome.css
+++ b/frontend/src/main/webapp/Metanome.css
@@ -16,6 +16,7 @@
 
 body {
 	font-family: arial;
+	overflow: hidden;
 }	
 
 .body {
@@ -60,6 +61,10 @@ h3 {
 	font-family: arial;
 }
 
+.gwt-TabLayoutPanelContentContainer div {
+	overflow-x: hidden;
+	overflow-y: scroll !important;	
+}
 .gwt-TabLayoutPanelContent {
     background: white;
 }
